# rats-search

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  clang-format.sh  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh
docs/: API.md
docs/compose/plans/: 2026-07-04-webui-implementation.md
docs/compose/reports/: webui.md
resources/: resources.qrc
resources/content/: badwords.json  extensions.json
resources/update/: unix_updater.sh.in  windows_updater.bat.in
src/: main.cpp  mainwindow.cpp  p2pnetwork.cpp  p2pnetwork.h  torrentclient.cpp  torrentclient.h  torrentexporter.cpp  torrentspider.cpp  torrentspider.h
src/api/: apiserver.cpp  apiserver.h  configmanager.cpp  configmanager.h  ratsapi.cpp  ratsapi.h  trackerwrapper.cpp
src/app/: application.cpp  application.h  config_store.cpp  config_store.h  favorites_store.cpp  favorites_store.h  translation_manager.cpp  translation_manager.h
src/bootstrap/: legacymigration.cpp  legacymigration.h  startupinfo.cpp  startupinfo.h
src/common/: infohash.h  result.h
src/data/: database.cpp  database.h  feed_repository.cpp  feed_repository.h  manticore.cpp  manticore.h  query.cpp  query.h  torrent_repository.cpp  torrent_repository.h
src/domain/: content.cpp  content.h  content_classifier.cpp  content_classifier.h  peer.h  torrent.cpp  torrent.h  torrent_codec.cpp  torrent_codec.h
src/net/: crawler.cpp  crawler.h  librats_convert.cpp  librats_convert.h  p2p_transport.cpp  p2p_transport.h  swarm_scraper.cpp  swarm_scraper.h  torrent_engine.cpp  torrent_engine.h  tracker_info_scraper.cpp  tracker_info_scraper.h  tracker_scraper.cpp  tracker_scraper.h  tracker_site_scraper.cpp  tracker_site_scraper.h
src/peer/: peer_api.cpp  peer_api.h
src/rest/: api_router.cpp  api_router.h  api_server.cpp  api_server.h
src/services/: download_service.cpp  download_service.h  feed_service.cpp  feed_service.h  filter_policy.cpp  filter_policy.h  indexing_service.cpp  indexing_service.h  migration_service.cpp  migration_service.h  p2p_store.cpp  p2p_store.h  peer_registry.cpp  peer_registry.h  replication_service.cpp  replication_service.h  search_service.cpp  search_service.h  torrent_creator.cpp  torrent_creator.h  torrent_exporter.cpp  torrent_exporter.h  torrent_session_store.cpp  torrent_session_store.h  tracker_service.cpp  tracker_service.h  update_service.cpp  update_service.h  voting_service.cpp  voting_service.h
src/ui/: activitywidget.cpp  activitywidget.h  autostartmanager.cpp  autostartmanager.h  downloadswidget.cpp  downloadswidget.h  favoriteswidget.cpp  favoriteswidget.h  feedwidget.cpp  feedwidget.h  format.h  mainwindow.cpp  mainwindow.h  searchresultmodel.cpp  searchresultmodel.h  settingsdialog.cpp  settingsdialog.h  toptorrentswidget.cpp  toptorrentswidget.h  torrentdetailspanel.cpp  torrentdetailspanel.h  torrentfileswidget.cpp  torrentfileswidget.h  torrentitemdelegate.cpp  torrentitemdelegate.h  torrentmenu.cpp  torrentmenu.h  torrenttablewidget.cpp  torrenttablewidget.h  utils.h
tests/: CMakeLists.txt  README.md  test_config_store.cpp  test_content_classifier.cpp  test_domain.cpp  test_filter_policy.cpp  test_infohash.cpp  test_manticore_queries.cpp  test_metrics_endpoint.cpp  test_query.cpp  test_update_service.cpp  test_webui.cpp
webui/: index.html
webui/css/: style.css
webui/js/: app.js  i18n.js
